--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="global.js"></script>
 </body>
 </html>
