--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Understanding Nutrition's Impact on Glucose Levels</h1>
+    <div id="chart-container"></div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="global.js"></script>
 </body>
