--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Understanding Nutrition's Impact on Glucose Levels</h1>
+    <p>Ever wondered which foods cause your blood sugar to spike? Frequent spikes can increase the risk of prediabetes and type 2 diabetes. Dive into our interactive graphs to explore how nutrition impacts glucose levels and discover insights that can help you make smarter dietary choices to manage blood sugar more effectively.</p>
     <div id="chart-container"></div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="global.js"></script>
